# bsd-runner

./: README.md  build.bat  config.py  discord.py  flags.py  game.py  keybindings.py  keyicons.py  levels.py  main.py  paths.py  pyproject.toml  requirements.txt  settings.py  strings.py
.github/workflows/: mypy.yml  release.yml
entities/: __init__.py  animation.py  chaser.py  laser.py  obstacle.py  player.py  tilemap.py
entities/input/: __init__.py  joybindings.py  joyicons.py  manager.py
entities/obstacle/: __init__.py  base.py  cage.py  ceiling.py  geometric.py  lane.py
screens/: __init__.py  game_screen.py  level_select.py  menu.py  menu_bg.py  options.py  ui.py
screens/game/: __init__.py  collision.py  hud.py  screen.py  spawner.py
screens/ui/: __init__.py  button.py  controls.py  glow.py  hitcounter.py  levelcard.py  score.py
tools/extract_tiles/: __main__.py
tools/remove_gif_background/: main.py
ui/: __init__.py  button.py
